--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.5
   change_app_package_name: 1.1.0
+  dropdown_search: 5.0.6
+  dio: 5.2.1+1
+  http: 1.1.0
   flutter: 
     sdk: flutter
 
